--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<li class="menu-item"><a href="#blog" class="menu-link">Новости</a></li>
 				</ul>
 				<a href="#" class="logo">
-					<img src="images/logo.svg" alt="Ferrari logotype" class="logo-img">
+					<img src="../images/logo.svg" alt="Ferrari logotype" class="logo-img">
 				</a>
 				<ul class="menu-list menu-right">
 					<li class="menu-item"><a href="https://motorsporttickets.com/en/f1" target="_blank"
@@ -60,7 +60,7 @@
 	</header>
 	<main class="main">
 		<div class="arrow">
-			<div class="inside-arrow"><img class="main__arrow" src="/images/arrow-up.png" alt="arrow up"></div>
+			<div class="inside-arrow"><img class="main__arrow" src="../images/arrow-up.png" alt="arrow up"></div>
 		</div>
 		<section class="promo">
 			<div class="big-container">
@@ -77,7 +77,7 @@
 
 					<p class="promo__text">автодром Портимао,Португалия</p>
 					<div class="promo__arrow">
-						<a href="#info"><img src="/images/arrow.svg" alt="Arrow downwards"></a>
+						<a href="#info"><img src="../images/arrow.svg" alt="Arrow downwards"></a>
 					</div>
 				</div>
 			</div>
@@ -211,7 +211,7 @@
 								</p>
 							</div>
 						</div>
-						<img class="evo-black__img" src="/images/evo-car.png" alt="Huracán Super Trofeo EVO">
+						<img class="evo-black__img" src="../images/evo-car.png" alt="Huracán Super Trofeo EVO">
 						<dl class="evo-descr__list">
 							<div>
 								<dd>ПЕРЕМЕЩЕНИЕ</dd>
@@ -257,7 +257,7 @@
 						<div class="evo-white__video">
 							<a href="https://youtube.com
 							" class="evo-white__video--link" target="_blank">
-								<img src="images/evo-icon.svg" alt="иконка play">
+								<img src="../images/evo-icon.svg" alt="иконка play">
 								<span>смотреть онлайн</span>
 							</a>
 						</div>
@@ -271,7 +271,7 @@
 				<div class="blog__slider swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide blog__item">
-							<img src="/images/slide-1.jpg" alt="fisrt slide" class="blog__item--img">
+							<img src="../images/slide-1.jpg" alt="fisrt slide" class="blog__item--img">
 							<h4 class="blog__item--title">НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ</h4>
 							<p class="blog__item--text">
 								Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение титула Lamborghini Super
@@ -284,7 +284,7 @@
 								class="blog__item--link">читать подробнее...</a>
 						</div>
 						<div class="swiper-slide blog__item">
-							<img src="/images/slide-2.jpg" alt="second slide" class="blog__item--img">
+							<img src="../images/slide-2.jpg" alt="second slide" class="blog__item--img">
 							<h4 class="blog__item--title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
 							<p class="blog__item--text">
 								Утренний дождь означал, что мокрая гонка была объявлена ​​до старта, и перед большинством
@@ -297,7 +297,7 @@
 								class="blog__item--link">читать подробнее...</a>
 						</div>
 						<div class="swiper-slide blog__item">
-							<img src="/images/slide-1.jpg" alt="third slide" class="blog__item--img">
+							<img src="../images/slide-1.jpg" alt="third slide" class="blog__item--img">
 							<h4 class="blog__item--title">НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ</h4>
 							<p class="blog__item--text">
 								Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение титула Lamborghini Super
@@ -310,7 +310,7 @@
 									подробнее...</a></div>
 						</div>
 						<div class="swiper-slide blog__item">
-							<img src="/images/slide-2.jpg" alt="fourth slide" class="blog__item--img">
+							<img src="../images/slide-2.jpg" alt="fourth slide" class="blog__item--img">
 							<h4 class="blog__item--title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
 							<p class="blog__item--text">
 								Утренний дождь означал, что мокрая гонка была объявлена ​​до старта, и перед большинством
@@ -324,10 +324,10 @@
 						</div>
 					</div>
 					<div class="blog__button swiper-button-left">
-						<img src="images/arrow-left.svg" alt="Left slider button" class="blog__item--btn">
+						<img src="../images/arrow-left.svg" alt="Left slider button" class="blog__item--btn">
 					</div>
 					<div class="blog__button swiper-button-right">
-						<img src="/images/arrow-right.svg" alt="Right slider button" class="blog__item--btn">
+						<img src="../images/arrow-right.svg" alt="Right slider button" class="blog__item--btn">
 					</div>
 				</div>
 				<div class="blog__quote">
@@ -361,7 +361,7 @@
 							</p>
 						</blockquote>
 					</div>
-					<img class="blog__quote--img" src="/images/quote.png" alt="The photo of a driver">
+					<img class="blog__quote--img" src="../images/quote.png" alt="The photo of a driver">
 				</div>
 			</div>
 		</section>
@@ -390,15 +390,15 @@
 						<ul class="social-list">
 							<li class="social-list__item">
 								<a href="https://www.youtube.com" target="_blank" class="social-list__link">
-									<img class="social-list__icon" src="/images/YOUTUBE.svg" alt=""></a>
+									<img class="social-list__icon" src="../images/YOUTUBE.svg" alt=""></a>
 							</li>
 							<li class="social-list__item">
 								<a href="https://www.instagram.com" target="_blank" class="social-list__link">
-									<img class="social-list__icon" src="/images/INST.svg" alt=""></a>
+									<img class="social-list__icon" src="../images/INST.svg" alt=""></a>
 							</li>
 							<li class="social-list__item">
 								<a href="https://www.facebook.com" target="_blank" class="social-list__link">
-									<img class="social-list__icon" src="/images/FACEBOOK.svg" alt=""></a>
+									<img class="social-list__icon" src="../images/FACEBOOK.svg" alt=""></a>
 							</li>
 						</ul>
 					</li>
@@ -415,7 +415,7 @@
 				<a href="https://vk.com/varvara.prokopchuk" class="footer__bottom--link">
 					Design by Varvara Prokopchuk
 				</a>
-				<a href="#" class="footer__logo"><img class="footer__logo--img" src="/images/Logo-small.png" alt=""></a>
+				<a href="#" class="footer__logo"><img class="footer__logo--img" src="../images/Logo-small.png" alt=""></a>
 				<a href="#" class="footer__bottom--link">
 					Политика конфиденциальности
 				</a>
@@ -427,7 +427,7 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
 		defer></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 </body>
 
 </html>
