--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
 	</header>
 	<main class="main">
 		<div class="arrow">
-			<div class="inside-arrow"><img class="main__arrow" src="../images/arrow-up.png" alt="arrow up"></div>
+			<div class="inside-arrow"><svg width="26" height="30" viewBox="0 0 26 30" fill="none"
+					xmlns="http://www.w3.org/2000/svg">
+					<path d="M0.5 22.2113L12.9904 29.4226L25.4808 22.2113V7.78868L12.9904 0.577349L0.5 7.78868V22.2113Z"
+						stroke="#9F6B08" />
+					<path
+						d="M12.6367 9.64645C12.8319 9.45118 13.1485 9.45118 13.3438 9.64645L16.5258 12.8284C16.721 13.0237 16.721 13.3403 16.5258 13.5355C16.3305 13.7308 16.0139 13.7308 15.8187 13.5355L12.9902 10.7071L10.1618 13.5355C9.96655 13.7308 9.64996 13.7308 9.4547 13.5355C9.25944 13.3403 9.25944 13.0237 9.4547 12.8284L12.6367 9.64645ZM12.4902 20V10H13.4902V20H12.4902Z"
+						fill="#9F6B08" />
+				</svg>
+
+			</div>
 		</div>
 		<section class="promo">
 			<div class="big-container">
@@ -421,7 +430,6 @@
 				</a>
 			</div>
 		</div>
-		</а>
 	</footer>
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
