--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 		<div class="big-container">
 			<nav class="nav">
 				<ul class="menu-list menu-left">
-					<li class="menu-item"><a href="#track" class="menu-link">Трек</a></li>
-					<li class="menu-item"><a href="#info" class="menu-link">О гонке</a></li>
-					<li class="menu-item"><a href="#evo" class="menu-link">Lamborghini Super trofeo</a></li>
-					<li class="menu-item"><a href="#blog" class="menu-link">Новости</a></li>
+					<li class="menu-item"><a href="index.html#track" class="menu-link menu-link__inner">Трек</a></li>
+					<li class="menu-item"><a href="index.html#info" class="menu-link menu-link__inner">О гонке</a></li>
+					<li class="menu-item"><a href="index.html#evo" class="menu-link menu-link__inner">Lamborghini Super
+							trofeo</a></li>
+					<li class="menu-item"><a href="index.html#blog" class="menu-link menu-link__inner">Новости</a></li>
 				</ul>
 				<a href="#" class="logo">
 					<img src="../images/logo.svg" alt="Ferrari logotype" class="logo-img">
@@ -35,7 +36,7 @@
 					<li class="menu-item"><a
 							href="https://srrb.ru/translyacii-sportivnyx-sobytij/translyacii-formula/smotret-onlajn-formula-1-testy-pryamoj-efir-23-fevralya-2023.html"
 							target="_blank" class="menu-link">Смотреть онлайн</a></li>
-					<li class="menu-item"><a href="#contacts" class="menu-link">Контакты</a></li>
+					<li class="menu-item"><a href="index.html#contacts" class="menu-link menu-link__inner">Контакты</a></li>
 				</ul>
 
 				<button class="menu-btn">
@@ -44,16 +45,17 @@
 					<span></span>
 				</button>
 				<ul class="menu-mobile">
-					<li class="menu-item"><a href="#track" class="menu-link">Трек</a></li>
-					<li class="menu-item"><a href="#info" class="menu-link">О гонке</a></li>
-					<li class="menu-item"><a href="#evo" class="menu-link">Lamborghini Super trofeo</a></li>
-					<li class="menu-item"><a href="#blog" class="menu-link">Новости</a></li>
+					<li class="menu-item"><a href="index.html#track" class="menu-link menu-link__inner">Трек</a></li>
+					<li class="menu-item"><a href="index.html#info" class="menu-link menu-link__inner">О гонке</a></li>
+					<li class="menu-item"><a href="index.html#evo" class="menu-link menu-link__inner">Lamborghini Super
+							trofeo</a></li>
+					<li class="menu-item"><a href="index.html#blog" class="menu-link menu-link__inner">Новости</a></li>
 					<li class="menu-item"><a href="https://motorsporttickets.com/en/f1" target="_blank"
 							class="menu-link">Купить билеты</a></li>
 					<li class="menu-item"><a
 							href="https://srrb.ru/translyacii-sportivnyx-sobytij/translyacii-formula/smotret-onlajn-formula-1-testy-pryamoj-efir-23-fevralya-2023.html"
 							target="_blank" class="menu-link">Смотреть онлайн</a></li>
-					<li class="menu-item"><a href="#contacts" class="menu-link">Контакты</a></li>
+					<li class="menu-item"><a href="index.html#contacts" class="menu-link menu-link__inner">Контакты</a></li>
 				</ul>
 			</nav>
 		</div>
