--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li class="menu-item"><a href="index.html#blog" class="menu-link menu-link__inner">Новости</a></li>
 				</ul>
 				<a href="#" class="logo">
-					<img src="../images/logo.svg" alt="Ferrari logotype" class="logo-img">
+					<img src="./images/logo.svg" alt="Ferrari logotype" class="logo-img">
 				</a>
 				<ul class="menu-list menu-right">
 					<li class="menu-item"><a href="https://motorsporttickets.com/en/f1" target="_blank"
@@ -89,7 +89,7 @@
 
 					<p class="promo__text">автодром Портимао,Португалия</p>
 					<div class="promo__arrow">
-						<a href="#info"><img src="../images/arrow.svg" alt="Arrow downwards"></a>
+						<a href="#info"><img src="./images/arrow.svg" alt="Arrow downwards"></a>
 					</div>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 						</b>
 					</div>
 				</div>
-				<img src="images/info-1.jpg" alt="" class="info__part-img">
+				<img src="./images/info-1.jpg" alt="" class="info__part-img">
 				<div class="info__part info__part--second">
 					<div class="info__content">
 						<h3 class="info__title">
@@ -135,7 +135,7 @@
 							американский континенты.
 						</p>
 					</div>
-					<img src="images/info-2.png" alt="" class="info__part-img">
+					<img src="./images/info-2.png" alt="" class="info__part-img">
 				</div>
 				<div class="info__part info__part--third">
 					<div class="info__content">
@@ -197,7 +197,7 @@
 						современных в Европе, раскинувшись на площади около 300 гектаров среди холмов, окружающих
 						португальский город, а длина самой трассы составляет 4684 метра.
 					</p>
-					<img src="/images/track-img.png" alt="" class="track__img">
+					<img src="./images/track-img.png" alt="" class="track__img">
 				</div>
 			</div>
 		</section>
@@ -223,7 +223,7 @@
 								</p>
 							</div>
 						</div>
-						<img class="evo-black__img" src="../images/evo-car.png" alt="Huracán Super Trofeo EVO">
+						<img class="evo-black__img" src="./images/evo-car.png" alt="Huracán Super Trofeo EVO">
 						<dl class="evo-descr__list">
 							<div>
 								<dd>ПЕРЕМЕЩЕНИЕ</dd>
@@ -269,7 +269,7 @@
 						<div class="evo-white__video">
 							<a href="https://youtube.com
 							" class="evo-white__video--link" target="_blank">
-								<img src="../images/evo-icon.svg" alt="иконка play">
+								<img src="./images/evo-icon.svg" alt="иконка play">
 								<span>смотреть онлайн</span>
 							</a>
 						</div>
@@ -283,7 +283,7 @@
 				<div class="blog__slider swiper">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide blog__item">
-							<img src="../images/slide-1.jpg" alt="fisrt slide" class="blog__item--img">
+							<img src="./images/slide-1.jpg" alt="fisrt slide" class="blog__item--img">
 							<h4 class="blog__item--title">НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ</h4>
 							<p class="blog__item--text">
 								Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение титула Lamborghini Super
@@ -296,7 +296,7 @@
 								class="blog__item--link">читать подробнее...</a>
 						</div>
 						<div class="swiper-slide blog__item">
-							<img src="../images/slide-2.jpg" alt="second slide" class="blog__item--img">
+							<img src="./images/slide-2.jpg" alt="second slide" class="blog__item--img">
 							<h4 class="blog__item--title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
 							<p class="blog__item--text">
 								Утренний дождь означал, что мокрая гонка была объявлена ​​до старта, и перед большинством
@@ -309,7 +309,7 @@
 								class="blog__item--link">читать подробнее...</a>
 						</div>
 						<div class="swiper-slide blog__item">
-							<img src="../images/slide-1.jpg" alt="third slide" class="blog__item--img">
+							<img src="./images/slide-1.jpg" alt="third slide" class="blog__item--img">
 							<h4 class="blog__item--title">НЕЛЬСОН ПИКЕ СТАЛ ПОБЕДИТЕЛЕМ ГРАНД-ФИНАЛА В ПОРТИМАНЕ</h4>
 							<p class="blog__item--text">
 								Нельсон Пике-младший из Ansa Motorsports обеспечил возвращение титула Lamborghini Super
@@ -322,7 +322,7 @@
 									подробнее...</a></div>
 						</div>
 						<div class="swiper-slide blog__item">
-							<img src="../images/slide-2.jpg" alt="fourth slide" class="blog__item--img">
+							<img src="./images/slide-2.jpg" alt="fourth slide" class="blog__item--img">
 							<h4 class="blog__item--title">ГРАНД ФИНАЛ. ДЕНЬ 1</h4>
 							<p class="blog__item--text">
 								Утренний дождь означал, что мокрая гонка была объявлена ​​до старта, и перед большинством
@@ -336,10 +336,10 @@
 						</div>
 					</div>
 					<div class="blog__button swiper-button-left">
-						<img src="../images/arrow-left.svg" alt="Left slider button" class="blog__item--btn">
+						<img src="./images/arrow-left.svg" alt="Left slider button" class="blog__item--btn">
 					</div>
 					<div class="blog__button swiper-button-right">
-						<img src="../images/arrow-right.svg" alt="Right slider button" class="blog__item--btn">
+						<img src="./images/arrow-right.svg" alt="Right slider button" class="blog__item--btn">
 					</div>
 				</div>
 				<div class="blog__quote">
@@ -373,7 +373,7 @@
 							</p>
 						</blockquote>
 					</div>
-					<img class="blog__quote--img" src="../images/quote.png" alt="The photo of a driver">
+					<img class="blog__quote--img" src="./images/quote.png" alt="The photo of a driver">
 				</div>
 			</div>
 		</section>
@@ -402,15 +402,15 @@
 						<ul class="social-list">
 							<li class="social-list__item">
 								<a href="https://www.youtube.com" target="_blank" class="social-list__link">
-									<img class="social-list__icon" src="../images/YOUTUBE.svg" alt=""></a>
+									<img class="social-list__icon" src="./images/YOUTUBE.svg" alt=""></a>
 							</li>
 							<li class="social-list__item">
 								<a href="https://www.instagram.com" target="_blank" class="social-list__link">
-									<img class="social-list__icon" src="../images/INST.svg" alt=""></a>
+									<img class="social-list__icon" src="./images/INST.svg" alt=""></a>
 							</li>
 							<li class="social-list__item">
 								<a href="https://www.facebook.com" target="_blank" class="social-list__link">
-									<img class="social-list__icon" src="../images/FACEBOOK.svg" alt=""></a>
+									<img class="social-list__icon" src="./images/FACEBOOK.svg" alt=""></a>
 							</li>
 						</ul>
 					</li>
@@ -427,7 +427,7 @@
 				<a href="https://vk.com/varvara.prokopchuk" class="footer__bottom--link">
 					Design by Varvara Prokopchuk
 				</a>
-				<a href="#" class="footer__logo"><img class="footer__logo--img" src="../images/Logo-small.png" alt=""></a>
+				<a href="#" class="footer__logo"><img class="footer__logo--img" src="./images/Logo-small.png" alt=""></a>
 				<a href="#" class="footer__bottom--link">
 					Политика конфиденциальности
 				</a>
