--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<li class="menu-item"><a href="index.html#blog" class="menu-link menu-link__inner">Новости</a></li>
 				</ul>
 				<a href="#" class="logo">
-					<img src="./images/logo.svg" alt="Ferrari logotype" class="logo-img">
+					<img src="/images/logo.svg" alt="Ferrari logotype" class="logo-img">
 				</a>
 				<ul class="menu-list menu-right">
 					<li class="menu-item"><a href="https://motorsporttickets.com/en/f1" target="_blank"
