--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
 		defer></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<script src="./js/main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
