--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 					</h2>
 
 					<p class="promo__text">автодром Портимао,Португалия</p>
-					<div class="promo__arrow">
-						<a href="#info"><img src="./images/arrow.svg" alt="Arrow downwards"></a>
+					<div class="promo__arrow ">
+						<a href="index.html#info" class="menu-link__inner"><img src="./images/arrow.svg"
+								alt="Arrow downwards"></a>
 					</div>
 				</div>
 			</div>
